--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/glenvasa/movie_api#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.9",
@@ -30,6 +33,6 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.10.0"
+    "eslint": "^7.11.0"
   }
 }
